# elixir-api

./: .env.example  .gitignore  DEBUGGING_STRUCTURED_OUTPUTS.md  README.md  docker-compose.yml  errors.txt  pyproject.toml  test_add_repo.sh  yoyo.ini
app/: db.py  dependencies.py  main.py
app/models/: schemas.py
app/routers/: chat.py  code_query.py  code_samples.py  doc_pages.py  pages.py  projects.py  sessions.py
app/services/: agent.py  api_prompt.py  data_model_prompt.py  frontend_prompt.py  metrics_using_graph_db.py  new_feature_prompt.py  overview_prompt.py  prompts.py  sessions.py
migrations/: 001_initial_schema.sql  003_add_repo_url.sql
migrations/archive/: 004_add_markdown_content_column.sql  README.md
scripts/: README.md  add_session_name.py  generate_documentation.py  init_db.sql  load_page.py  test.py
scripts/outputs/: .gitignore
