[project]
name = "knowledge-extraction-api"
version = "0.1.0"
description = "Knowledge extraction API with FerretDB and FastAPI"
requires-python = ">=3.12"
dependencies = [
    "pymongo>=4.6.0",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
